# mcp-zernio

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  komodo.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
openspec/changes/api-coverage-p0-p1/: design.md  proposal.md  tasks.md
openspec/changes/api-coverage-p0-p1/specs/account-management/: spec.md
openspec/changes/api-coverage-p0-p1/specs/activity-logs/: spec.md
openspec/changes/api-coverage-p0-p1/specs/broadcasts/: spec.md
openspec/changes/api-coverage-p0-p1/specs/comments-management/: spec.md
openspec/changes/api-coverage-p0-p1/specs/contacts-crm/: spec.md
openspec/changes/api-coverage-p0-p1/specs/content-research/: spec.md
openspec/changes/api-coverage-p0-p1/specs/inbox-conversations/: spec.md
openspec/changes/universal-inbox-ui/: design.md  proposal.md  tasks.md
openspec/changes/zernio-fastmcp-wrapper/: design.md  proposal.md  tasks.md
scripts/: probe_thread_payload.py
src/zernio_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  inbox.py  inbox_app_core.py  inbox_app_interactions.py  inbox_html.py  models.py  prompts.py  resources.py  server.py  upload.py
src/zernio_mcp/tools/: __init__.py  _common.py  accounts.py  analytics.py  broadcasts.py  comments.py  contacts.py  inbox.py  logs.py  media.py  misc.py  platform_helpers.py  posts.py  profiles.py  queue.py  research.py  reviews.py  twitter.py  validation.py  webhooks.py
tests/: conftest.py  test_client.py  test_inbox.py  test_new_tools.py  test_output_schema.py  test_smoke.py  test_tool_tags.py  test_tools.py  test_typed_returns_p3.py
(+18 files in other folders)
