[project]
name = "mcp-zernio"
version = "0.3.44"
description = "FastMCP wrapper for Zernio social media management API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.2,<4.0.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "resend>=2.0.0",
    # Security floors (transitive deps of fastmcp; pinned to address CVEs)
    "authlib>=1.7.0",            # GHSA: CSRF in token cache handling
    "python-multipart>=0.0.27",  # GHSA: DoS via unbounded multipart headers
]

[project.scripts]
mcp-zernio = "zernio_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zernio_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
